source/tests/errors/function_expects_arguments.apex
function xyu(a)
    return 0

xyu(1, 2)